base/resources/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  namespace: traefik-system
spec:
  basicAuth:
    #namespace: traefik-system
    secret: traefik-auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
    argocd.argoproj.io/instance: authelia
  name: forwardauth-authelia
  namespace: traefik-system
spec:
  forwardAuth:
    address: http://authelia.traefik-system.svc.cluster.local/api/verify?rd=https%3A%2F%2Fauth.jaymes.xyz%2F
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
